# kirin

./: .dockerignore  .env.backup  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTION.md  Dockerfile  LICENSE.md  Makefile  README.md  SECURITY.md  codecov.yaml  docker-compose.demo.yaml  docker-compose.gpu.yaml  docker-compose.yaml  pyproject.toml  ruff.toml
backend/: .dockerignore  Dockerfile  Dockerfile_alternative  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/sample_files/: sample.csv
backend/src/: main.py
backend/src/api/: endpoints.py
backend/src/api/dependencies/: repository.py  session.py
backend/src/api/routes/: account.py  ai_model.py  authentication.py  chat.py  data_analyze.py  datasets.py  file.py  health.py  load.py  neural_nets.py  rag_datasets.py  train.py  upload.py  version.py
backend/src/config/: events.py
backend/src/config/settings/: base.py  const.py  development.py
backend/src/models/: meta.py
backend/src/models/db/: account.py  ai_model.py  chat.py  dataset.py  file.py
backend/src/models/schemas/: account.py  ai_model.py  base.py  chat.py  data_analyze.py  dataset.py  file.py  health.py  jwt.py  neural_nets.py  train.py  version.py
backend/src/repository/: __init__.py  ai_model.py  ai_models.py  conversation.py  data_visualization.py  database.py  datasets_eng.py  events.py  inference_eng.py  meta_database.py  rag_datasets_eng.py  vector_database.py  vector_db.py
backend/src/repository/crud/: account.py  ai_model.py  base.py  chat.py  dataset_db.py  file.py  vectors_helper.py
backend/src/repository/migrations/: env.py
backend/src/repository/rag/: __init__.py  base.py  chat.py
backend/src/repository/vector/: base.py
backend/src/securities/authorizations/: jwt.py
backend/src/utilities/devices/: devices.py
backend/src/utilities/exceptions/http/: exc_400.py  exc_404.py
backend/src/utilities/formatters/: __init__.py  ds_formatter.py
backend/src/utilities/httpkit/: httpx_kit.py  method_kit.py
backend/src/utilities/verifier/: file.py
backend/templates/: bokeh.html
backend/tests/: conftest.py
backend/tests/auth/: test_auth.py
backend/tests/unit_tests/: test_api_authentication.py  test_api_health.py  test_api_version.py  test_httpx_kit.py  test_jwt.py  test_method_kit.py  test_src.py
(+33 files in other folders)
