[tool.poetry]
name = "kirin"
version = "0.1.9"
description = "The APIs aggregator for SkywardAI"
authors = ["SkywardAI <urakiny@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.13.1"
argon2-cffi = "23.1.0"
asgi-lifespan = "2.1.0"
async-timeout = "4.0.3"
asyncio = "3.4.3"
asyncpg = "0.29.0"
bcrypt = "4.0.1"
email-validator = "2.1.1"
fastapi = "0.110.0"
greenlet = "3.0.3"
httpx = "0.27.0"
loguru = "0.7.2"
passlib = "1.7.4"
pathlib = "1.0.1"
psycopg2-binary = "2.9.9"
pydantic-settings = "2.2.1"
pymilvus = "2.3.7"
python-decouple = "3.8"
python-dotenv = "1.0.1"
PyJWT= "2.8.0"
python-multipart = "0.0.9"
python-slugify = "8.0.4"
sqlalchemy = "2.0.29"
trio = "0.25.0"
uvicorn = "0.29.0"
openai = "1.40.3"
datasets = "2.18.0"


[tool.poetry.dev-dependencies]
python = "^3.11"
alembic = "1.13.1"
argon2-cffi = "23.1.0"
asgi-lifespan = "2.1.0"
async-timeout = "4.0.3"
asyncio = "3.4.3"
asyncpg = "0.29.0"
bcrypt = "4.0.1"
email-validator = "2.1.1"
fastapi = "0.110.0"
greenlet = "3.0.3"
httpx = "0.27.0"
loguru = "0.7.2"
passlib = "1.7.4"
pathlib = "1.0.1"
psycopg2-binary = "2.9.9"
pydantic-settings = "2.2.1"
pymilvus = "2.3.7"
python-decouple = "3.8"
python-dotenv = "1.0.1"
PyJWT= "2.8.0"
python-multipart = "0.0.9"
python-slugify = "8.0.4"
sqlalchemy = "2.0.29"
trio = "0.25.0"
uvicorn = "0.29.0"
openai = "1.40.3"
pre-commit="3.7.0"
pytest="8.1.1"
datasets = "2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
